# hftlib

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_allocators.cpp  run_allocator_benchmarks.py
include/: mpsc_queue.hpp  simple_vector.hpp  smart_ptr.hpp  spsc_ring_buffer.hpp  zero_copy_dispatcher.hpp
tests/: test_mpsc_queue.cpp  test_simple_vector.cpp  test_smart_ptr.cpp  test_spsc_ring_buffer.cpp  test_zero_copy_dispatcher.cpp
